Fixed overflows column for the user profile avatar in the edit mode

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -47,3 +47,8 @@
 body {
   background-color: rgb(241, 241, 241);
 }
+
+.non-padding-custom-file-label {
+  padding-left: 0px;
+  padding-right: 0px;
+}
